# rs-arrow2ipc2stdout

./: Cargo.toml  README.md
examples/arrow2ipc2stdout/: Cargo.toml  arrow2ipc2stdout  arrow2ipc2stdout.wasm  run.sh
examples/arrow2ipc2stdout/src/: main.rs
src/: lib.rs
