[package]
name = "rs-arrow2ipc2stdout"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"
expect_used = "forbid"

[dependencies.arrow-ipc]
version = "56"
default-features = false
features = [
]

[dependencies.arrow-array]
version = "56"
default-features = false
features = [
]

[dependencies.arrow-schema]
version = "56"
default-features = false
features = [
	"serde",
]

[dependencies.serde]
version = "1"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1"
default-features = false
features = [
	"std",
]
